finish the Practice 11 and add the complie part in CmakeLists.txt

--- a/CPrimePlus_Fourteenth/CMakeLists.txt
+++ b/CPrimePlus_Fourteenth/CMakeLists.txt
@@ -29,4 +29,9 @@ add_executable(CPrimePlus_Fourteenth_Practice_3 Practice_3.c)
 add_executable(CPrimePlus_Fourteenth_Practice_4_a Practice_4_a.c)
 add_executable(CPrimePlus_Fourteenth_Practice_4_b Practice_4_b.c)
 add_executable(CPrimePlus_Fourteenth_Practice_5 Practice_5.c)
-add_executable(CPrimePlus_Fourteenth_Practice_6 Practice_6.c)
+add_executable(CPrimePlus_Fourteenth_Practice_6 Practice_6.c Practice_6_data)
+add_executable(CPrimePlus_Fourteenth_Practice_7 Practice_7.c)
+add_executable(CPrimePlus_Fourteenth_Practice_8 Practice_8.c)
+add_executable(CPrimePlus_Fourteenth_Practice_9 Practice_9.c)
+add_executable(CPrimePlus_Fourteenth_Practice_10 Practice_10.c)
+add_executable(CPrimePlus_Fourteenth_Practice_11 Practice_11.c)
