--- a/CPrimePlus_Fifteenth/CMakeLists.txt
+++ b/CPrimePlus_Fifteenth/CMakeLists.txt
@@ -9,3 +9,13 @@ add_executable(CPrimePlus_Fifteenth_Book_2 Book_2.c)
 add_executable(CPrimePlus_Fifteenth_Book_3 Book_3.c)
 add_executable(CPrimePlus_Fifteenth_Book_4 Book_4.c)
 add_executable(CPrimePlus_Fifteenth_Book_5 Book_5.c)
+add_executable(CPrimePlus_Fifteenth_Book_6 Book_6.c)
+add_executable(CPrimePlus_Fifteenth_Book_7 Book_7.c)
+add_executable(CPrimePlus_Fifteenth_Book_8 Book_8.c)
+add_executable(CPrimePlus_Fifteenth_Practice_1 Practice_1.c)
+add_executable(CPrimePlus_Fifteenth_Practice_2 Practice_2.c)
+add_executable(CPrimePlus_Fifteenth_Practice_3 Practice_3.c)
+add_executable(CPrimePlus_Fifteenth_Practice_4 Practice_4.c)
+add_executable(CPrimePlus_Fifteenth_Practice_5 Practice_5.c)
+add_executable(CPrimePlus_Fifteenth_Practice_6 Practice_6.c)
+add_executable(CPrimePlus_Fifteenth_Practice_7 Practice_7.c)
