just add something

--- a/CPrimePlus_Sixteenth/CMakeLists.txt
+++ b/CPrimePlus_Sixteenth/CMakeLists.txt
@@ -8,3 +8,19 @@ add_executable(CPrimePlus_Sixteenth_Book_1 Book_1.c)
 add_executable(CPrimePlus_Sixteenth_Book_2 Book_2.c)
 add_executable(CPrimePlus_Sixteenth_Book_3 Book_3.c)
 add_executable(CPrimePlus_Sixteenth_Book_4 Book_4.c)
+add_executable(CPrimePlus_Sixteenth_Book_5 Book_5_main.c Book_5_function.c Book_5.h)
+add_executable(CPrimePlus_Sixteenth_Book_6 Book_6.c)
+add_executable(CPrimePlus_Sixteenth_Book_7 Book_7.c)
+add_executable(CPrimePlus_Sixteenth_Book_8 Book_8.c)
+add_executable(CPrimePlus_Sixteenth_Book_9 Book_9.c)
+add_executable(CPrimePlus_Sixteenth_Book_10 Book_10.c)
+add_executable(CPrimePlus_Sixteenth_Book_11 Book_11.c)
+add_executable(CPrimePlus_Sixteenth_Book_12 Book_12.c)
+add_executable(CPrimePlus_Sixteenth_Book_13 Book_13.c)
+add_executable(CPrimePlus_Sixteenth_Book_14 Book_14.c)
+add_executable(CPrimePlus_Sixteenth_Book_15 Book_15.c)
+add_executable(CPrimePlus_Sixteenth_Book_16 Book_16.c)
+add_executable(CPrimePlus_Sixteenth_Book_17 Book_17.c)
+add_executable(CPrimePlus_Sixteenth_Book_18 Book_18.c)
+add_executable(CPrimePlus_Sixteenth_Review_9 Review_9.c)
+add_executable(CPrimePlus_Sixteenth_Practice_1 Practice_1.c)
