finish three Practice

--- a/CPrimePlus_Sixteenth/CMakeLists.txt
+++ b/CPrimePlus_Sixteenth/CMakeLists.txt
@@ -22,5 +22,7 @@ add_executable(CPrimePlus_Sixteenth_Book_15 Book_15.c)
 add_executable(CPrimePlus_Sixteenth_Book_16 Book_16.c)
 add_executable(CPrimePlus_Sixteenth_Book_17 Book_17.c)
 add_executable(CPrimePlus_Sixteenth_Book_18 Book_18.c)
+add_executable(CPrimePlus_Sixteenth_Practice_1 Practice_1.h Practice_1.c)
+add_executable(CPrimePlus_Sixteenth_Practice_2 Practice_2.c)
+add_executable(CPrimePlus_Sixteenth_Practice_3 Practice_3.c)
 add_executable(CPrimePlus_Sixteenth_Review_9 Review_9.c)
-add_executable(CPrimePlus_Sixteenth_Practice_1 Practice_1.c)
