finish all the Practice code

--- a/CPrimePlus_Sixteenth/CMakeLists.txt
+++ b/CPrimePlus_Sixteenth/CMakeLists.txt
@@ -25,4 +25,8 @@ add_executable(CPrimePlus_Sixteenth_Book_18 Book_18.c)
 add_executable(CPrimePlus_Sixteenth_Practice_1 Practice_1.h Practice_1.c)
 add_executable(CPrimePlus_Sixteenth_Practice_2 Practice_2.c)
 add_executable(CPrimePlus_Sixteenth_Practice_3 Practice_3.c)
+add_executable(CPrimePlus_Sixteenth_Practice_4 Practice_4.c)
+add_executable(CPrimePlus_Sixteenth_Practice_5 Practice_5.c)
+add_executable(CPrimePlus_Sixteenth_Practice_6 Practice_6.c)
+add_executable(CPrimePlus_Sixteenth_Practice_7 Practice_7.c)
 add_executable(CPrimePlus_Sixteenth_Review_9 Review_9.c)
