finish the queue simulate

--- a/CPrimePlus_Seventeenth/CMakeLists.txt
+++ b/CPrimePlus_Seventeenth/CMakeLists.txt
@@ -8,3 +8,5 @@ add_executable(CPrimePlus_Seventeenth_Book_1 Book_1.c)
 add_executable(CPrimePlus_Seventeenth_Book_2 Book_2.c)
 add_executable(CPrimePlus_Seventeenth_Book_3 Book_3.h Book_3_main.c Book_3_function.c)
 add_executable(CPrimePlus_Seventeenth_Book_4 Book_4.h Book_4_main.c Book_4_function.c)
+add_executable(CPrimePlus_Seventeenth_Book_5 Book_5.h Book_5_main.c BooK_5_function.c)
+add_executable(CPrimePlus_Seventeenth_Book_6 Book_6.h BooK_6_function.c)
