finish the Practice 8, it quit hard

--- a/CPrimePlus_Seventeenth/CMakeLists.txt
+++ b/CPrimePlus_Seventeenth/CMakeLists.txt
@@ -9,4 +9,13 @@ add_executable(CPrimePlus_Seventeenth_Book_2 Book_2.c)
 add_executable(CPrimePlus_Seventeenth_Book_3 Book_3.h Book_3_main.c Book_3_function.c)
 add_executable(CPrimePlus_Seventeenth_Book_4 Book_4.h Book_4_main.c Book_4_function.c)
 add_executable(CPrimePlus_Seventeenth_Book_5 Book_5.h Book_5_main.c BooK_5_function.c)
-add_executable(CPrimePlus_Seventeenth_Book_6 Book_6.h BooK_6_function.c)
+add_executable(CPrimePlus_Seventeenth_Book_6 Book_6.h BooK_6_function.c Book_6_main.c)
+add_executable(CPrimePlus_Seventeenth_Review_5 Review_5.h Review_5.c)
+add_executable(CPrimePlus_Seventeenth_Practice_1 Practice_1.c)
+add_executable(CPrimePlus_Seventeenth_Practice_2 Practice_2.h Practice_2_function.c Practice_2_main.c)
+add_executable(CPrimePlus_Seventeenth_Practice_3 Practice_3.h Practice_3_function.c)
+add_executable(CPrimePlus_Seventeenth_Practice_4 Practice_4.h Practice_4_function.c Practice_4_main.c)
+add_executable(CPrimePlus_Seventeenth_Practice_5 Practice_5.h Practice_5_function.c Practice_5_main.c)
+add_executable(CPrimePlus_Seventeenth_Practice_6 Practice_6.c)
+add_executable(CPrimePlus_Seventeenth_Practice_7 Practice_7.h Practice_7_function.c Practice_7_main.c)
+add_executable(CPrimePlus_Seventeenth_Practice_8 Practice_8_tree.h Practice_8_tree_function.c Practice_8_main.c Practice_8_list.h Practice_8_list_function.c)
